# semantic_diff

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE_NOTES.md  CONTRIBUTING.md  LICENSE  PERSPECTIVES.md  README.md  TODO.md  action.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  semantic-diff.yml
semantic_diff/: cli.py  models.py
semantic_diff/analyzers/: llm_analyzer.py
semantic_diff/formatters/: console_formatter.py  markdown_formatter.py
semantic_diff/parsers/: git_parser.py
semantic_diff_reports/: 336926a2_20260121_093211.md  cdf9fa8a_20260121_093440.md
tests/: TEST_COVERAGE_SUMMARY.md  conftest.py  test_cli.py  test_formatters.py  test_git_parser.py  test_llm_analyzer.py  test_models.py
