[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-diff"
version = "0.1.0"
description = "AI-powered semantic analysis of git commits"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Kenaz GmbH", email = "hello@kenaz.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
semantic-diff = "semantic_diff.cli:main"

[project.urls]
Homepage = "https://github.com/tkenaz/semantic_diff"
Repository = "https://github.com/tkenaz/semantic_diff"

[tool.setuptools.packages.find]
include = ["semantic_diff*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
